deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: release-v2-0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-v2-0
  labels:
    app: flask-app-v2-0
  namespace: release-v2-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app-v2-0
  template:
    metadata:
      labels:
        app: flask-app-v2-0
    spec:
      tolerations: # applying toleration
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
        - name: flask-container-v2-0
          image: docker.io/sayantan2k21/flask-app:v2.0-1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service-v2-0
  namespace: release-v2-0
spec:
  selector:
    app: flask-app-v2-0
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
