ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress-v1-0
  namespace: release-v1-0
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /app/v1-0(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flask-service-v1-0
                port:
                  number: 80
